# pwdgen

./: .envrc  .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  Makefile  README.md  mkpw.py  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
pwdgen/: __init__.py  command_line.py  eff_wordlist.py  generators.py  rand.py  utils.py  wordlist.py
src/: lib.rs  main.rs  utils.rs  wordlist.txt  wordlist_1830_match6.txt
tests/: test_generators.py  test_utils.py
