[package]
name = "pwdgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "pwdgen"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "pwdgen" # The binary can have a different name
path = "src/main.rs"

[features]
python-extension = []

[build-dependencies]
pyo3-build-config = "0.19.0"

[dependencies]
clap = "3.1.6"
rand = "0.8"
emojis = "0.6.1"

[dependencies.pyo3]
version = "0.19.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py39", "extension-module"]
